refac(doc): #3423.4 fix-descriptions-keywords
- Descriptions and keywords were modified on some pages.


Former-commit-id: 447c0a748f130f4f3087ab412bcfacb3c37c0b89

--- a/content/pages/careers/portfolio/index.adoc
+++ b/content/pages/careers/portfolio/index.adoc
@@ -1,7 +1,7 @@
 :slug: careers/portfolio/
 :category: careers
-:description: The following page is meant to inform everyone interested in being part of the Fluid Attacks team about the selection process. The portfolio is a document that describes your biggest personal, professional and academic achievements, examples and results of your best projects.
-:keywords: Fluid Attacks, Career, Process, Selection, Portfolio, Candidate.
+:description: A portfolio is a document that describes your biggest personal, professional, and academic achievements. Do you want to show us your portfolio?
+:keywords: Fluid Attacks, Careers, Process, Selection, Portfolio, Candidate, Pentester, Ethical Hacker
 
 = Portfolio
 
