--- a/content/pages/topics/index.adoc
+++ b/content/pages/topics/index.adoc
@@ -1,6 +1,6 @@
 :slug: topics/
-:description: In Fluid Attacks' website you can find a large variety of topics related to information security, good programming practices and more. This page aims to become a space where everyone can share their opinions, if you wish to share yours, do not hesitate to send us your article.
-:keywords: Fluid Attacks, Website, Topics, Blog, Opinion, Security.
+:description: Fluid Attack's website is a place where you can share your IT opinions. If you want to contribute to our blog, look at our topics of interest here.
+:keywords: Fluid Attacks, Website, Topics, Blog, Opinion, Security, Ethical Hacking, Pentesting
 :category: blog
 
 = Topics
