--- a/content/pages/rules/out-of-scope/assets/005/index.adoc
+++ b/content/pages/rules/out-of-scope/assets/005/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/005/
 :category: assets
-:description: This document contains the details of the security requirements related to a company's information assets. Information assets must be appraised and a monetary value set for each of them thus allowing the organization to know the importance and cost of loss and to determine cost effective controls.
-:keywords: Requirement, Security, Assets, Information, Value, Monetary.
+:description: Information assets must be evaluated and a monetary value set for each one. The company will then know the costs of loss and determine cost-effective controls.
+:keywords: Requirement, Security, Assets, Information, Value, Monetary, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
