--- a/content/pages/rules/out-of-scope/assets/016/index.adoc
+++ b/content/pages/rules/out-of-scope/assets/016/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/016/
 :category: assets
-:description: This document details the security guidelines and requirements related to the company's information assets. The objective of this security requirement is to deepen in the importance of correcting the vulnerabilities detected in the information assets.
-:keywords: Requirement, Security, Assets, Information, Correction, Vulnerabilities
+:description: The objective of this security requirement is to highlight the importance of correcting the vulnerabilities detected in information assets.
+:keywords: Requirement, Security, Assets, Information, Correction, Vulnerabilities, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
