--- a/content/pages/rules/session/026/index.adoc
+++ b/content/pages/rules/session/026/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/026/
 :category: session
-:description: This documents contains the details of the security requirements related to web application session management and session variables. This requirement establishes the importance of encrypting and verifying client side session information in order to ensure the protection of health information.
-:keywords: Requirement, Security, Session, Information, ViewState, Client side
+:description: This requirement establishes the importance of encrypting and verifying client-side session information.
+:keywords: Requirement, Security, Session, Information, ViewState, Client Side, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R026. Encrypt client-side session information
