--- a/content/pages/rules/files/036/index.adoc
+++ b/content/pages/rules/files/036/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/036/
 :category: files
-:description: This document contains the details of the security requirements related to the definition and management of files in the organization. Therefore, for this requirement it is recommended that every system does not deploy temporary files when it is in production.
-:keywords: Environment, System, Archive, Deployment, Production, Temporary
+:description: This requirement establishes that every system does not deploy temporary files when it is in production.
+:keywords: Environment, System, Archive, Deployment, Production, Temporary, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R036. Do not deploy temporary files
