--- a/content/pages/rules/files/037/index.adoc
+++ b/content/pages/rules/files/037/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/037/
 :category: files
-:description: This document contains the details of the security requirements related to the definition and management of files in the organization. This requirement establishes the importance of discarding potentially harmful data inputs in parameters in order to avoid code injections and data leakage.
-:keywords: Requirement, Security, Path, Directory, Parameter, File
+:description: This requirement establishes the importance of discarding potentially harmful data inputs in parameters to avoid code injections and data leakage.
+:keywords: Requirement, Security, Path, Directory, Parameter, File, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R037. Parameters without sensitive data
