--- a/content/pages/rules/files/044/index.adoc
+++ b/content/pages/rules/files/044/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/044/
 :category: files
-:description: This document contains the details of the security requirements related to the definition and management of files in the organization. This requirement establishes the importance of defining a explicit character set for all system files dynamically generated.
-:keywords: Requirement, Security, Character Set, Encoding, Files, Dynamic
+:description: This requirement establishes the importance of defining an explicit Character set for all system files dynamically generated.
+:keywords: Requirement, Security, Character Set, Encoding, Files, Dynamic, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R044. Define explicit charset
