--- a/content/pages/rules/out-of-scope/files/047/index.adoc
+++ b/content/pages/rules/out-of-scope/files/047/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/047/
 :category: files
-:description: This documents contains the details of the security requirements related to file management in the organization. This requirement establishes the importance of classify critical files and establish tools to monitor them in order to detect any alteration that may result in a security breach.
-:keywords: Requirement, Security, Critical, Components, Application, Identification
+:description: This requirement establishes the importance of classifying critical files and defining the tools to monitor them to detect any possible security breach.
+:keywords: Requirement, Security, Critical, Components, Application, Identification, Security Breaches, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
