--- a/content/pages/rules/authorization/034/index.adoc
+++ b/content/pages/rules/authorization/034/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/034/
 :category: authorization
-:description: This document contains the details of the security requirements related to the definition and management of systems in the organization. This requirement establishes the importance of allowing the system to manage and disable the user accounts through privileged users or system administrators.
-:keywords: Requirement, Security, User, Accounts, Management, Administration
+:description: This requirement establishes the importance of allowing the system to manage and disable the user accounts through privileged users or system administrators.
+:keywords: Requirement, Security, User, Accounts, Management, Administration, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R034. Manage user accounts
