--- a/content/pages/rules/files/041/index.adoc
+++ b/content/pages/rules/files/041/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/041/
 :category: files
-:description: This document details the security guidelines and requirements related to files management within the organization or company. In this case, it is recommended that the files transferred or uploaded to the system be scanned for possible malicious code.
-:keywords: System, Validate, File, Code, Security, Malicious
+:description: This requirement establishes that the files transferred or uploaded to the system must be scanned for possible malicious code.
+:keywords: System, Validate, File, Code, Security, Malicious, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R041. Scan files for malicious code
