--- a/content/pages/rules/files/045/index.adoc
+++ b/content/pages/rules/files/045/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/045/
 :category: files
-:description: This document details the security guidelines and requirements related to files management within the organization or company. Therefore, in this requirement it is strongly recommended that the metadata be removed from any file before sharing it with others.
-:keywords: Metadata, File, Remove, ASVS, CWE, GDPR
+:description: This requirement establishes that the metadata must be removed from any file before sharing it with others.
+:keywords: Metadata, File, Remove, ASVS, CWE, GDPR, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R045. Remove metadata when sharing files
