--- a/content/pages/rules/session/029/index.adoc
+++ b/content/pages/rules/session/029/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/029/
 :category: session
-:description: This documents contains the details of the security requirements related to web application session management and session variables. This requirement establishes the importance of using cookies with the required security attributes such as HttpOnly and Secure.
-:keywords: Session, Cookies, Attributes, ASVS, CWE, NIST
+:description: This requirement establishes the importance of using cookies with the required security attributes such as HttpOnly and Secure.
+:keywords: Session, Cookies, Attributes, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R029. Cookies with security attributes
