--- a/content/pages/rules/session/031/index.adoc
+++ b/content/pages/rules/session/031/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/031/
 :category: session
-:description: This document contains the details of the security requirements related to the definition and management of sessions and session variables in the organization. This requirement establishes the importance discarding all related data when a session is terminated.
-:keywords: Session, Objects, Discard, ASVS, CWE, NIST
+:description: This requirement establishes the importance of discarding all related data when a session is terminated.
+:keywords: Session, Objects, Discard, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R031. Discard user session data
